--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		
 	</div>
 	<div class="container">
-		<h1>Why chose My Books ?</h1>
+		<h1>Why choose My Books ?</h1>
 		<p>Reading is about sharing but do you always remember who you shared your books with ? My Books helps you to manage your library. In a glance, you see who borrowed your books and who lent you some. You can also meet other reading buddies to discover other writters and other genres.</p>
 		<p>Join our nice community !</p>
 		<h1>How to use My Books ?</h1>
